# agent-smith

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_smith/: __init__.py  app.py  config.py  db.py  logging_config.py  models.py  orchestrator.py
agent_smith/agents/: __init__.py  base.py  curator.py  planner.py  researcher.py  tutor.py
agent_smith/tools/: __init__.py  llm.py  vector.py  web.py
prompts/: setup.txt
var/: agent_smith.db
