[project]
name = "agent-smith"
version = "0.1.0"
description = "Agent Smith is a multi-agent FastAPI backend for personalized AI tutoring."
readme = "README.md"
authors = [{ name = "Agent Smith" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "chromadb",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "beautifulsoup4",
    "structlog",
    "python-dotenv",
    "duckduckgo-search",
]

[project.optional-dependencies]
dev = ["pytest", "anyio"]
openai = ["openai>=1.0.0"]

[tool.setuptools.packages.find]
include = ["agent_smith"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
